grammar/.antlr/AraraParser.py
# Generated from Arara.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AraraParser ( Parser ):

    grammarFileName = "Arara.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'leia'", "'('", "')'", "';'", "'escreva'", 
                     "'<-'", "'se'", "'entao'", "'fimse'", "'senao'", "'enquanto'", 
                     "'faca'", "'fimenquanto'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "STRING", "OPSUM", "OPMULT", "OPCOMP", "OPLOG", "WS" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_atribuicao = 2
    RULE_condicional = 3
    RULE_cond_opc = 4
    RULE_repeticao = 5
    RULE_bloco = 6
    RULE_expressao = 7
    RULE_logica = 8
    RULE_logica_suf = 9
    RULE_comparacao = 10
    RULE_comparacao_suf = 11
    RULE_soma = 12
    RULE_soma_suf = 13
    RULE_termo = 14
    RULE_termo_suf = 15
    RULE_fator = 16

    ruleNames =  [ "programa", "comando", "atribuicao", "condicional", "cond_opc", 
                   "repeticao", "bloco", "expressao", "logica", "logica_suf", 
                   "comparacao", "comparacao_suf", "soma", "soma_suf", "termo", 
                   "termo_suf", "fator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    ID=15
    INT=16
    STRING=17
    OPSUM=18
    OPMULT=19
    OPCOMP=20
    OPLOG=21
    WS=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AraraParser.EOF, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AraraParser.ComandoContext)
            else:
                return self.getTypedRuleContext(AraraParser.ComandoContext,i)


        def getRuleIndex(self):
            return AraraParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = AraraParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34978) != 0):
                self.state = 34
                self.comando()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(AraraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AraraParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(AraraParser.ExpressaoContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(AraraParser.AtribuicaoContext,0)


        def condicional(self):
            return self.getTypedRuleContext(AraraParser.CondicionalContext,0)


        def repeticao(self):
            return self.getTypedRuleContext(AraraParser.RepeticaoContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_comando

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = AraraParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(AraraParser.T__0)
                self.state = 43
                self.match(AraraParser.T__1)
                self.state = 44
                self.match(AraraParser.ID)
                self.state = 45
                self.match(AraraParser.T__2)
                self.state = 46
                self.match(AraraParser.T__3)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(AraraParser.T__4)
                self.state = 48
                self.match(AraraParser.T__1)
                self.state = 49
                self.expressao()
                self.state = 50
                self.match(AraraParser.T__2)
                self.state = 51
                self.match(AraraParser.T__3)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.atribuicao()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.condicional()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.repeticao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AraraParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(AraraParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_atribuicao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = AraraParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(AraraParser.ID)
            self.state = 59
            self.match(AraraParser.T__5)
            self.state = 60
            self.expressao()
            self.state = 61
            self.match(AraraParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(AraraParser.ExpressaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(AraraParser.BlocoContext,0)


        def cond_opc(self):
            return self.getTypedRuleContext(AraraParser.Cond_opcContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = AraraParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_condicional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(AraraParser.T__6)
            self.state = 64
            self.expressao()
            self.state = 65
            self.match(AraraParser.T__7)
            self.state = 66
            self.bloco()
            self.state = 67
            self.cond_opc()
            self.state = 68
            self.match(AraraParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_opcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicional(self):
            return self.getTypedRuleContext(AraraParser.CondicionalContext,0)


        def bloco(self):
            return self.getTypedRuleContext(AraraParser.BlocoContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_cond_opc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_opc" ):
                return visitor.visitCond_opc(self)
            else:
                return visitor.visitChildren(self)




    def cond_opc(self):

        localctx = AraraParser.Cond_opcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cond_opc)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(AraraParser.T__9)
                self.state = 71
                self.condicional()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(AraraParser.T__9)
                self.state = 73
                self.bloco()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(AraraParser.ExpressaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(AraraParser.BlocoContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_repeticao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeticao" ):
                return visitor.visitRepeticao(self)
            else:
                return visitor.visitChildren(self)




    def repeticao(self):

        localctx = AraraParser.RepeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_repeticao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(AraraParser.T__10)
            self.state = 78
            self.expressao()
            self.state = 79
            self.match(AraraParser.T__11)
            self.state = 80
            self.bloco()
            self.state = 81
            self.match(AraraParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AraraParser.ComandoContext)
            else:
                return self.getTypedRuleContext(AraraParser.ComandoContext,i)


        def getRuleIndex(self):
            return AraraParser.RULE_bloco

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = AraraParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34978) != 0):
                self.state = 83
                self.comando()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logica(self):
            return self.getTypedRuleContext(AraraParser.LogicaContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_expressao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao" ):
                return visitor.visitExpressao(self)
            else:
                return visitor.visitChildren(self)




    def expressao(self):

        localctx = AraraParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expressao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.logica()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparacao(self):
            return self.getTypedRuleContext(AraraParser.ComparacaoContext,0)


        def logica_suf(self):
            return self.getTypedRuleContext(AraraParser.Logica_sufContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_logica

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogica" ):
                return visitor.visitLogica(self)
            else:
                return visitor.visitChildren(self)




    def logica(self):

        localctx = AraraParser.LogicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logica)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.comparacao()
            self.state = 92
            self.logica_suf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logica_sufContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPLOG(self):
            return self.getToken(AraraParser.OPLOG, 0)

        def comparacao(self):
            return self.getTypedRuleContext(AraraParser.ComparacaoContext,0)


        def logica_suf(self):
            return self.getTypedRuleContext(AraraParser.Logica_sufContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_logica_suf

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogica_suf" ):
                return visitor.visitLogica_suf(self)
            else:
                return visitor.visitChildren(self)




    def logica_suf(self):

        localctx = AraraParser.Logica_sufContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logica_suf)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(AraraParser.OPLOG)
                self.state = 95
                self.comparacao()
                self.state = 96
                self.logica_suf()
                pass
            elif token in [3, 4, 8, 12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def soma(self):
            return self.getTypedRuleContext(AraraParser.SomaContext,0)


        def comparacao_suf(self):
            return self.getTypedRuleContext(AraraParser.Comparacao_sufContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_comparacao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparacao" ):
                return visitor.visitComparacao(self)
            else:
                return visitor.visitChildren(self)




    def comparacao(self):

        localctx = AraraParser.ComparacaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comparacao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.soma()
            self.state = 102
            self.comparacao_suf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparacao_sufContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPCOMP(self):
            return self.getToken(AraraParser.OPCOMP, 0)

        def soma(self):
            return self.getTypedRuleContext(AraraParser.SomaContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_comparacao_suf

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparacao_suf" ):
                return visitor.visitComparacao_suf(self)
            else:
                return visitor.visitChildren(self)




    def comparacao_suf(self):

        localctx = AraraParser.Comparacao_sufContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comparacao_suf)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(AraraParser.OPCOMP)
                self.state = 105
                self.soma()
                pass
            elif token in [3, 4, 8, 12, 21]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SomaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self):
            return self.getTypedRuleContext(AraraParser.TermoContext,0)


        def soma_suf(self):
            return self.getTypedRuleContext(AraraParser.Soma_sufContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_soma

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSoma" ):
                return visitor.visitSoma(self)
            else:
                return visitor.visitChildren(self)




    def soma(self):

        localctx = AraraParser.SomaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_soma)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.termo()
            self.state = 110
            self.soma_suf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Soma_sufContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPSUM(self):
            return self.getToken(AraraParser.OPSUM, 0)

        def termo(self):
            return self.getTypedRuleContext(AraraParser.TermoContext,0)


        def soma_suf(self):
            return self.getTypedRuleContext(AraraParser.Soma_sufContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_soma_suf

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSoma_suf" ):
                return visitor.visitSoma_suf(self)
            else:
                return visitor.visitChildren(self)




    def soma_suf(self):

        localctx = AraraParser.Soma_sufContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_soma_suf)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(AraraParser.OPSUM)
                self.state = 113
                self.termo()
                self.state = 114
                self.soma_suf()
                pass
            elif token in [3, 4, 8, 12, 20, 21]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self):
            return self.getTypedRuleContext(AraraParser.FatorContext,0)


        def termo_suf(self):
            return self.getTypedRuleContext(AraraParser.Termo_sufContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_termo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermo" ):
                return visitor.visitTermo(self)
            else:
                return visitor.visitChildren(self)




    def termo(self):

        localctx = AraraParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_termo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.fator()
            self.state = 120
            self.termo_suf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Termo_sufContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPMULT(self):
            return self.getToken(AraraParser.OPMULT, 0)

        def fator(self):
            return self.getTypedRuleContext(AraraParser.FatorContext,0)


        def termo_suf(self):
            return self.getTypedRuleContext(AraraParser.Termo_sufContext,0)


        def getRuleIndex(self):
            return AraraParser.RULE_termo_suf

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermo_suf" ):
                return visitor.visitTermo_suf(self)
            else:
                return visitor.visitChildren(self)




    def termo_suf(self):

        localctx = AraraParser.Termo_sufContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_termo_suf)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(AraraParser.OPMULT)
                self.state = 123
                self.fator()
                self.state = 124
                self.termo_suf()
                pass
            elif token in [3, 4, 8, 12, 18, 20, 21]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self):
            return self.getTypedRuleContext(AraraParser.FatorContext,0)


        def expressao(self):
            return self.getTypedRuleContext(AraraParser.ExpressaoContext,0)


        def INT(self):
            return self.getToken(AraraParser.INT, 0)

        def STRING(self):
            return self.getToken(AraraParser.STRING, 0)

        def ID(self):
            return self.getToken(AraraParser.ID, 0)

        def getRuleIndex(self):
            return AraraParser.RULE_fator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFator" ):
                return visitor.visitFator(self)
            else:
                return visitor.visitChildren(self)




    def fator(self):

        localctx = AraraParser.FatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_fator)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(AraraParser.T__13)
                self.state = 130
                self.fator()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(AraraParser.T__1)
                self.state = 132
                self.expressao()
                self.state = 133
                self.match(AraraParser.T__2)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(AraraParser.INT)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.match(AraraParser.STRING)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.match(AraraParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





